Revert "Merge branch 'John-Branch' into main"
This reverts commit 8eeaa6d0a579b6e5c9fdcd1dddbaf664bed7ae0d, reversing
changes made to 76c35f59d948d8644605c83f74de82eea6d604ee.