@@ -2,7 +2,6 @@ package Networking;
 
 import Messages.ChatMessage;
 import Messages.Message;
-import Messages.QueueMessage;
 import Messages.SubscribeMessage;
 
 import java.lang.reflect.Array;
@@ -25,49 +24,6 @@ public class ServerProcess implements Runnable
     private BlockingQueue<ClientConnection> matchmakingQueue;
     private BlockingQueue<Map<String, Object>> messagesToProcess;
 
-    private void handleSubscribeMessage(Map<String, Object> map)
-    {
-        ClientConnection client = (ClientConnection) map.get("Client");
-        String topic = (String) map.get("Topic");
-        String topicType = (String) map.get("TopicType");
-        boolean subscribe = (boolean) map.get("Subscribe");
-        if (subscribe)
-            subscribe(topic, topicType, client);
-        else
-            unsubscribe(topic, topicType, client);
-    }
-
-    private void handleQueueMessage(Map<String, Object> map)
-    {
-        ClientConnection client = (ClientConnection) map.get("Client");
-        boolean joinQueue = (boolean) map.get("InQueue");
-        System.out.println("JOIN QUEUE: " + joinQueue);
-        if (joinQueue)
-            matchmakingQueue.add(client);
-        else
-            matchmakingQueue.remove(client);
-    }
-
-    private void handleMoveMessage(Map<String, Object> map)
-    {
-        ClientConnection client = (ClientConnection) map.get("Client");
-        String gameId = (String) map.get("GameId");
-        long row = (long) map.get("Row");
-        long col = (long) map.get("Col");
-        GameProcess findGame = games.get(gameId);
-        if (findGame != null)
-            findGame.requestMove(client, (int) row, (int) col);
-    }
-
-    private void handleChatMessage(Map<String, Object> map)
-    {
-        ClientConnection client = (ClientConnection) map.get("Client");
-        String playerName = "" + client.getId(); //Eventually, change this to their actual name!
-        String playerChat = (String) map.get("PlayerChat");
-        String channelName = (String) map.get("ChatChannel");
-        sendToSubscribedClients(channelName, new ChatMessage(playerName, playerChat, channelName), client);
-    }
-
     private void handleClientMessagesProcess()
     {
         try
@@ -75,22 +31,44 @@ public class ServerProcess implements Runnable
             while (keepServerRunning) {
                 Map<String, Object> map = messagesToProcess.take();
                 String messageType = (String) map.get("MessageType");
-                switch (messageType)
+                if (messageType.equals("SubscribeMessage"))
                 {
-                    case "SubscribeMessage":
-                        handleSubscribeMessage(map);
-                        break;
-                    case "QueueMessage":
-                        handleQueueMessage(map);
-                        break;
-                    case "MoveMessage":
-                        handleMoveMessage(map);
-                        break;
-                    case "ChatMessage":
-                        handleChatMessage(map);
-                        break;
-                    default:
-                        System.out.println("Failed to process message: " + messageType);
+                    ClientConnection client = (ClientConnection) map.get("Client");
+                    String topic = (String) map.get("Topic");
+                    String topicType = (String) map.get("TopicType");
+                    boolean subscribe = (boolean) map.get("Subscribe");
+                    if (subscribe)
+                        subscribe(topic, topicType, client);
+                    else
+                        unsubscribe(topic, topicType, client);
+                }
+                else if (messageType.equals("QueueMessage"))
+                {
+                    ClientConnection client = (ClientConnection) map.get("Client");
+                    boolean joinQueue = (boolean) map.get("InQueue");
+                    if (joinQueue)
+                        matchmakingQueue.add(client);
+                    else
+                        matchmakingQueue.remove(client);
+                }
+                else if (messageType.equals("MoveMessage"))
+                {
+                    ClientConnection client = (ClientConnection) map.get("Client");
+                    String gameId = (String) map.get("GameId");
+                    int row = (int) map.get("Row");
+                    int col = (int) map.get("Col");
+                    GameProcess findGame = games.get(gameId);
+                    if (findGame != null)
+                        findGame.requestMove(client, row, col);
+                }
+                else if (messageType.equals("ChatMessage"))
+                {
+                    ClientConnection client = (ClientConnection) map.get("Client");
+                    String playerName = "" + client.getId(); //Eventually, change this to their actual name!
+                    String channelName = (String) map.get("ChatChannel");
+                    String playerChat = (String) map.get("PlayerChat");
+                    sendToSubscribedClients(channelName, new ChatMessage(playerName, playerChat, channelName), client);
+                    // Send message to their topic!
                 }
             }
         }
@@ -109,37 +87,31 @@ public class ServerProcess implements Runnable
             {
                 ClientConnection nextPlayer = matchmakingQueue.take();
 
-                if (gamePlayers.getFirst() == null)
-                    gamePlayers.setFirst(nextPlayer);
-                else if (gamePlayers.getSecond() == null)
-                    gamePlayers.setSecond(nextPlayer);
+                if (gamePlayers.get(0) == null)
+                    gamePlayers.set(0, nextPlayer);
+                else if (gamePlayers.get(1) == null)
+                    gamePlayers.set(1, nextPlayer);
 
-                if (gamePlayers.getFirst() != null && gamePlayers.getSecond() != null)
+                if (gamePlayers.get(0) != null && gamePlayers.get(1) != null)
                 {
                     //Start the game!
                     String newGameId = JSON.generateGUID();
                     System.out.println("NEW GAME STARTED: " + newGameId);
-                    GameProcess newGameProcess = new GameProcess(this, newGameId, gamePlayers);
+                    GameProcess newGameProcess = new GameProcess(this, newGameId, gamePlayers); //(ServerProcess, gameId, Pair<ClientConnection>)
                     games.put(newGameId, newGameProcess);
 
                     //Subscribe clients to the game AND game chat channel
-                    unsubscribe("CHAT_GLOBAL", "Chat", gamePlayers.getFirst());
-                    unsubscribe("CHAT_GLOBAL", "Chat", gamePlayers.getSecond());
-                    subscribe("CHAT_" + newGameId, "Chat", gamePlayers.getFirst());
-                    subscribe("CHAT_" + newGameId, "Chat", gamePlayers.getSecond());
+                    unsubscribe("CHAT_GLOBAL", "Chat", gamePlayers.get(0));
+                    unsubscribe("CHAT_GLOBAL", "Chat", gamePlayers.get(1));
+                    subscribe("CHAT_" + newGameId, "Chat", gamePlayers.get(0));
+                    subscribe("CHAT_" + newGameId, "Chat", gamePlayers.get(1));
                     //Subscribe clients to the game
-                    subscribe("GAME_" + newGameId, "Game", gamePlayers.getFirst());
-                    subscribe("GAME_" + newGameId, "Game", gamePlayers.getSecond());
-
-                    //Let the players know they're out of the queue!
-                    QueueMessage gameFoundMessage = new QueueMessage(false, newGameId);
-                    gamePlayers.getFirst().writeMessage(gameFoundMessage);
-                    gamePlayers.getSecond().writeMessage(gameFoundMessage);
+                    subscribe("GAME_" + newGameId, "Game", gamePlayers.get(0));
+                    subscribe("GAME_" + newGameId, "Game", gamePlayers.get(1));
 
                     Thread handleNewGameThread = new Thread(newGameProcess);
                     handleNewGameThread.start();
 
-                    //Clear pair for another matchmaking attempt
                     gamePlayers = new Pair<>();
                 }
             }
@@ -150,45 +122,32 @@ public class ServerProcess implements Runnable
         }
     }
 
-    public void killGameProcess(String gameId)
-    {
-        GameProcess findGame = games.get(gameId);
-        games.remove(findGame);
-    }
-
-    public void sendToSubscribedClients(String topic, Message newMessage, ClientConnection ignoreClient)
+    private void sendToSubscribedClients(String topic, Message newMessage, ClientConnection ignoreClient)
     {
         ArrayList<ClientConnection> subs = subscriptions.get(topic);
-        if (subs != null)
+        for (ClientConnection client : subs)
         {
-            for (ClientConnection client : subs) {
-                if (ignoreClient == null)
-                    client.writeMessage(newMessage);
-                else if (client != ignoreClient)
-                    client.writeMessage(newMessage);
-            }
+            if (ignoreClient != null && client != ignoreClient)
+                client.writeMessage(newMessage);
         }
     }
 
-    public void subscribe(String topic, String topicType, ClientConnection client)
+    private void subscribe(String topic, String topicType, ClientConnection client)
     {
         System.out.println("SUBSCRIBE: " + topic + " CLIENT: " + client.getId());
         ArrayList<ClientConnection> clients = subscriptions.get(topic);
         if (clients == null)
-        {
-            subscriptions.put(topic, new ArrayList<>());
-            clients = subscriptions.get(topic);
-        }
+            clients = new ArrayList<>();
         clients.add(client);
         client.writeMessage(new SubscribeMessage(topic, topicType, true));
     }
 
-    public void unsubscribe(String topic, String topicType, ClientConnection client)
+    private void unsubscribe(String topic, String topicType, ClientConnection client)
     {
         System.out.println("UNSUBSCRIBE: " + topic + " CLIENT: " + client.getId());
         ArrayList<ClientConnection> clients = subscriptions.get(topic);
         if (clients != null)
-            return;
+            clients.remove(client);
         client.writeMessage(new SubscribeMessage(topic, topicType, false));
     }
 
@@ -224,9 +183,6 @@ public class ServerProcess implements Runnable
                 connections.add(newConnection);
                 InetAddress inetAddress = clientSocketConnection.getInetAddress();
                 System.out.println("Accepted connection from " + inetAddress.getHostAddress());
-
-                //Subscribe the user to the global chat automatically
-                subscribe("GLOBAL_CHAT", "Chat", newConnection);
             }
             System.out.println("Server shutting down");
         }
